# uwuwu-agent

./: .gitignore  .gitmodules  AGENTS.md  LICENSE  README.md  apply.ps1  apply.sh  build_release.ps1  dcp.jsonc  opencode.json  package-lock.json  package.json  purge-opencode.ps1  purge-opencode.sh  start-memory.ps1  start-memory.sh
.qlty/: qlty.toml
.qlty/hooks/: pre-commit.sh  pre-push.sh
agent/: architect.md  code-quality-reviewer.md  developer.md  dreaming.md  engineer.md  head-of-development.md  marketer.md  office-coworker.md  tool-accessor.md
marketing/: .env.example  .gitignore
marketing/artifacts/: .gitkeep
marketing/metrics/: TEMPLATE.md
marketing/strategies/: smos-rust.md
memory/: .gitignore  package-lock.json  package.json  tdai-gateway.yaml
skills/architect-bug/: SKILL.md
skills/architect-feature/: SKILL.md
skills/architect-refactor/: SKILL.md
skills/architect-ui-ux/: SKILL.md
skills/engineer-csharp/: SKILL.md
skills/engineer-leptos/: SKILL.md
skills/engineer-playwright/: SKILL.md
skills/engineer-python/: SKILL.md
skills/engineer-rust/: SKILL.md
skills/engineer-typescript/: SKILL.md
skills/engineer-ui-ux/: SKILL.md
skills/flow-agents-md-writer/: SKILL.md
skills/flow-audit/: SKILL.md
skills/flow-bug/: SKILL.md
skills/flow-code-documentation/: SKILL.md
skills/flow-feature/: SKILL.md
skills/flow-merge-review/: SKILL.md
skills/flow-refactor/: SKILL.md
skills/flow-timesheet/: SKILL.md
skills/office-coworker-docx/: SKILL.md
skills/office-coworker-pdf/: SKILL.md
skills/office-coworker-pptx/: SKILL.md
skills/office-coworker-xlsx/: SKILL.md
skills/rules-clean-code/: SKILL.md
smos-rust/: .factcheck.json  .gitignore  AGENTS.md  CONTRIBUTING.md  Cargo.toml  LICENSE  PERFORMANCE.md  README.md  build_err.txt  dbg_out.txt  dbg_out2.txt  fin2_out.txt  fin_err.txt  fin_out.txt  imp1_out.txt  imp2_out.txt  rust-toolchain.toml  smos.toml
smos-rust/.cargo/: config.toml
smos-rust/.github/: pull_request_template.md
smos-rust/.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
smos-rust/.qlty/: qlty.toml
smos-rust/docs/: ARCHITECTURE.md  SMOKE_TEST.md
smos-rust/scripts/: smoke_seed.json  smoke_seed_v2.json
smos-rust/smos-adapters/: Cargo.toml
smos-rust/smos-adapters/src/: config.rs  lib.rs
smos-rust/smos-adapters/src/cli/: audit_runner.rs  doctor_runner.rs  finalize_runner.rs  import_helpers.rs  import_runner.rs  mod.rs  server_runner.rs  service.rs  shutdown.rs  tracing_setup.rs
smos-rust/smos-adapters/src/cli/service/: linux.rs  macos.rs  paths.rs  templates.rs  templates_tests.rs  windows.rs  windows_helpers.rs
smos-rust/smos-adapters/src/doctor/: aggregation.rs  markdown.rs  mod.rs  models.rs  terminal.rs  types.rs
smos-rust/smos-adapters/src/doctor/checks/: binaries.rs  llm_providers.rs  mod.rs  ollama.rs  surreal.rs
smos-rust/smos-adapters/src/dreaming/: agent.rs  agent_tests.rs  mod.rs  prompts.rs  report.rs  scheduler.rs
smos-rust/smos-adapters/src/dreaming/tools/: count_facts.rs  delete_fact.rs  flag_conflict.rs  get_fact.rs  list_facts.rs  merge_facts.rs  mod.rs  nli_classify.rs  search_facts.rs  shared.rs  update_fact.rs  write_report.rs
smos-rust/smos-adapters/src/http/: axum_server.rs  error_mapper.rs  mod.rs  stream_transform.rs
smos-rust/smos-adapters/src/http/routes/: chat_completions.rs  health.rs  mod.rs
smos-rust/smos-adapters/src/nli/: device.rs  mod.rs  model_cache.rs  native_nli.rs  runtime.rs
smos-rust/smos-adapters/src/opencode/: cli.rs  discovery.rs  mod.rs  transcript.rs
smos-rust/smos-adapters/src/providers/: mod.rs  noop.rs
smos-rust/smos-adapters/src/providers/llama_cpp/: llama_cpp_reranker.rs  mod.rs
smos-rust/smos-adapters/src/providers/ollama/: mod.rs  ollama_client.rs  ollama_embedding.rs  ollama_extractor.rs
smos-rust/smos-adapters/src/runtime/: delay.rs  extraction_supervisor.rs  mod.rs  session_watcher.rs
smos-rust/smos-adapters/src/storage/: mod.rs  surreal_schema.rs  surreal_store.rs  system_clock.rs  system_id_generator.rs
smos-rust/smos-adapters/src/upstream/: mod.rs  reqwest_upstream.rs  sse_parser.rs  streaming_buffer.rs
smos-rust/smos-adapters/tests/: doctor_unit.rs  e2e_defensive.rs  e2e_enrichment.rs  e2e_extraction.rs  e2e_finalize.rs  e2e_import.rs  e2e_passthrough.rs  e2e_request.rs  e2e_server.rs  e2e_session_watcher.rs  native_nli_tests.rs  spike_surrealdb_syntax.rs  surreal_store_integration.rs
smos-rust/smos-adapters/tests/common/: mod.rs
smos-rust/smos-adapters/tests/fixtures/: sample_transcript.json
smos-rust/smos-application/: Cargo.toml
smos-rust/smos-application/src/: lib.rs
smos-rust/smos-application/src/errors/: mod.rs  provider_error.rs  repo_error.rs  upstream_error.rs  use_case_error.rs
smos-rust/smos-application/src/helpers/: memory_block.rs  mod.rs  model_parser.rs  noise_filter.rs  openai_content.rs  request_enricher.rs  retrieval_planner.rs  session_marker.rs  topic_extractor.rs
smos-rust/smos-application/src/ports/: clock.rs  delay.rs  embedding_provider.rs  fact_repository.rs  id_generator.rs  llm_extractor.rs  llm_upstream.rs  mod.rs  nli_classifier.rs  rerank_provider.rs  session_repository.rs
smos-rust/smos-application/src/types/: chat_request.rs  chat_response.rs  enrichment_messages.rs  merge_result.rs  mod.rs  rerank_result.rs  search_hit.rs
smos-rust/smos-application/src/use_cases/: enrich_request.rs  extract_facts_from_response.rs  finalize_session.rs  handle_chat_completion.rs  import_opencode_session.rs  mod.rs
smos-rust/smos-application/tests/: port_shape.rs
smos-rust/smos-domain/: Cargo.toml
smos-rust/smos-domain/src/: chat.rs  config.rs  error.rs  lib.rs
smos-rust/smos-domain/src/entities/: fact.rs  mod.rs  session.rs
smos-rust/smos-domain/src/enums/: fact_status.rs  fact_type.rs  merge_reason.rs  mod.rs  nli_label.rs
smos-rust/smos-domain/src/value_objects/: confidence.rs  cosine.rs  embedding.rs  fact_content.rs  fact_id.rs  heat.rs  memory_key.rs  mod.rs  nli.rs  session_id.rs  source_sessions.rs  timestamp.rs
tools/: bg.ts  memory.ts  time.ts  vision.ts
(+47 files in other folders)
