[workspace]
resolver = "2"
members = ["smos-domain", "smos-application", "smos-adapters"]

[workspace.package]
edition = "2024"
rust-version = "1.96"
authors = ["turbin_y <yurvon@ya.ru>"]
license = "MIT"
repository = "https://github.com/yurvon-screamo/smos"

[workspace.dependencies]
# Version catalog. Each crate opts in via `<dep>.workspace = true`.
# Note: `smos-domain` MUST stay IO-free; it deliberately declares only the
# first four entries.
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["preserve_order"] }
thiserror = "2"
time = { version = "0.3", features = ["serde", "serde-well-known", "macros"] }
sha1 = "0.10"
regex = "1"
futures = "0.3"
bytes = "1"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
surrealdb = { version = "2", features = ["kv-rocksdb"] }
uuid = { version = "1", features = ["v4"] }
# Intra-workspace crates. Path + version lets us publish independently later.
smos-domain = { path = "smos-domain", version = "0.1.0" }
smos-application = { path = "smos-application", version = "0.1.0" }

[profile.release]
lto = true
codegen-units = 1

[profile.dev]
debug = true
