[package]
name = "smos-domain"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "SMOS domain layer — entities, value objects, pure domain logic. NO IO dependencies."

[dependencies]
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
time.workspace = true
sha1.workspace = true

# `[dev-dependencies]` is intentionally empty: every dependency above is
# already available to test builds (Cargo unifies dev with normal deps).
